Fix WebRTC when using AVDA.

RTCVideoDecoder didn't get updated to support overlay promotion
hints and the "is surface texture" flags.  This causes it to
try to promote video frames from AVDA to overlays.  This doesn't
work at all.

This is a short-term fix to the larger problem of the flags
changing interpretation.  crbug.com/772167 tracks the work to put
the flags back the way they were.

Bug: 769148
Change-Id: I1d324262ad04144d1d7fb617231c8bca7ce672d3
Reviewed-on: https://chromium-review.googlesource.com/703931
Reviewed-by: Chris Watkins <watk@chromium.org>
Commit-Queue: Frank Liberato <liberato@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507062}
Former-commit-id: 2a390a83bd4adf0c719584a7a40fcfbf62a09824