content/renderer/media/gpu/rtc_video_decoder.cc
@@ -456,9 +456,16 @@ scoped_refptr<media::VideoFrame> RTCVideoDecoder::CreateVideoFrame(
                          weak_factory_.GetWeakPtr(), factories_,
                          picture.picture_buffer_id(), pb.client_texture_ids())),
           pb.size(), visible_rect, visible_rect.size(), timestamp_ms);
-  if (frame && picture.allow_overlay()) {
+  if (frame) {
     frame->metadata()->SetBoolean(media::VideoFrameMetadata::ALLOW_OVERLAY,
-                                  true);
+                                  picture.allow_overlay());
+#if defined(OS_ANDROID)
+    frame->metadata()->SetBoolean(media::VideoFrameMetadata::SURFACE_TEXTURE,
+                                  picture.surface_texture());
+    frame->metadata()->SetBoolean(
+        media::VideoFrameMetadata::WANTS_PROMOTION_HINT,
+        picture.wants_promotion_hint());
+#endif
   }
   return frame;
 }
